--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,14 +35,14 @@ jobs:
 
 ## TIP
 ## deploy steps and permissions for the Github token needed to deploy to gh-pages
-#   permissions:
-#     contents: write
-#   steps:
-#     - name: Deploying to gh-pages
-#       uses: peaceiris/actions-gh-pages@v3
-#       with:
-#         github_token: ${{ secrets.GITHUB_TOKEN }}
-#         publish_dir: ./dist
+      permissions:
+        contents: write
+      steps:
+        - name: Deploying to gh-pages
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: ./dist
 
 ## TIP:
 ## to deploy to GH pages, set this env var in the build step
